test/testdata/classes/methods/static/invalid_binary_op_error.lox
class Foo {
  static bar() {}
}
Foo.bar - 1; // error: '-' operator cannot be used with types 'function' and 'number'
